@@ -47,6 +47,7 @@ Version 1.0.7.22
   -  Example script allows remembered source and preselected language to be cleared (Milian Wolff)
   -  Example script now properly includes geshi and doesn't suppress error messages anylonger. (Milian Wolff)
   -  Code cleanup by using direct string indexing instead of substr with length 1 (Milian Wolff)
+  -  Optimized generation of code parts in strict mode (Milian Wolff)
   -  First of series of color scheme changes. Affected languages (sofar):
      * Assembler (x86)
      * Bash
